--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+attrs==22.2.0
 black==23.1.0
 click==8.1.3
+exceptiongroup==1.1.0
 Flask==2.2.3
 importlib-metadata==6.0.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
@@ -11,6 +14,8 @@ packaging==23.0
 pandas==1.5.3
 pathspec==0.11.0
 platformdirs==3.0.0
+pluggy==1.0.0
+pytest==7.2.1
 python-dateutil==2.8.2
 pytz==2022.7.1
 six==1.16.0
